log
  File "main.py", line 1117
    self.det_thread.save_folder = r'.\auto_save\jpg\pt_protrusion' if value > int(area_min) else self.det_thread.save_folder = None
                                  ^
SyntaxError: cannot assign to conditional expression
